--- a/style.less
+++ b/style.less
@@ -1,7 +1,31 @@
-/** 
+/**
 * Anax Flat theme.
 */
 @import url(modules.less);
+
+/** --------------------------------------------------------------
+ *  Header
+ */
+
+.site-header {
+    padding-top: 5px;
+    height: 55px;
+}
+
+.site-logo-text {
+    float: left;
+    width: 30%;
+}
+
+.site-logo-text {
+    font-size: 2em;
+
+    a {
+        text-decoration: none;
+        color: #222;
+    }
+
+}
 
 
 
@@ -17,5 +41,73 @@
 .site-logo-text-icon {
     img {
         vertical-align: bottom;
+    }
+}
+
+
+/** --------------------------------------------------------------
+ *
+ */
+
+.outer-wrap-breadcrumb {
+    display: none;
+}
+
+.article {
+    width: 85%;
+    padding-bottom: 25px;
+    float: left;
+}
+
+.footer-column {
+    border-style: solid;
+    border-color: darkgreen;
+    height: 148px;
+    padding-left: 25px;
+    width: 30%;
+    background-color: lightgray;
+}
+
+
+
+
+/** --------------------------------------------------------------
+ *  Responsiv design
+ */
+
+img {
+    max-width: 98%;
+}
+
+
+@media screen and (max-width: 900px) {
+    .site-logo-text {
+        width: 40%;
+    }
+
+//    .navbar2 {
+//        width: 50%;
+//    }
+
+//    .profile {
+//        width: 10%;
+//    }
+}
+
+@media screen and (max-width: 750px) {
+    .sidebar {
+        width: 100%;
+    }
+    //.article {
+    //    width: 98%;
+    //    float: left;
+    //}
+
+}
+
+
+@media screen and (max-width: 929px) {
+    .footer-column {
+        width: 93%;
     }
 }
